--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,5 +6,9 @@ services:
     container_name: airflow-webserver
     ports:
       - "8080:8080"
+    volumes:
+      - type: bind
+        source: /tmp/data
+        target: /tmp/data
 
    
